# sendit

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: email-assistant-cd.yml  email-assistant-ci.yml  email-assistant-start-app.yml  email-assistant-start.yml  email-assistant-stop.yml  email-consumer-cd.yml  email-consumer-ci.yml  email-consumer-stop.yml  sendit-email-consumer-ci.yml  sendit-email-consumer-start.yml  sendit-server-ci.yml  web-app-cd.yml
email-assistant/: Dockerfile  go.mod  go.sum
email-assistant/src/: main.go
email-assistant/src/api/: server.go
email-assistant/src/config/: config.go
email-assistant/src/docs/: docs.go  swagger.json  swagger.yaml
email-assistant/src/handlers/: email.go
email-assistant/src/models/: email.go  gemini.go
email-assistant/src/services/: gemini.go  redis.go
email-consumer/: Cargo.toml  Dockerfile
email-consumer/src/config/: conf.rs
email-consumer/src/models/: mod.rs
email-consumer/src/services/: email.rs  redis.rs
redis-server/: Dockerfile  redis.conf
sendit-email-consumer/: Cargo.toml  Dockerfile
sendit-email-consumer/src/: main.rs
sendit-email-consumer/src/config/: conf.rs
sendit-email-consumer/src/models/: email.rs  errors.rs
sendit-server/: go.mod  go.sum
sendit-server/src/: main.go
sendit-server/src/api/: server.go
sendit-server/src/config/: config.go
sendit-server/src/docs/: docs.go  swagger.json  swagger.yaml
sendit-server/src/handlers/: email.go
sendit-server/src/models/: errors.go
web-app/: index.html  script.js  styles.css
(+3 files in other folders)
